--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
       <div class="carousel w-full">
         <div id="slide1" class="justify-center text-center carousel-item relative w-full" style="background-image: url('images/banner1.png'); background-size: 100%; background-repeat: no-repeat;">
           <div>
-            <h1 class="text-white text-lg mb-1 mt-1 lg:text-7xl lg:mb-6 lg:mt-20">Exotic tastes at your<br>doorstep</h1>
-            <p class="text-white text-base mb-2 lg:text-xl lh:mb-8">We supply highly quality organic products</p>
-            <button class="btn border-none bg-[#F85559] text-white pt-3 pb-3 pl-7 pr-7 mb-9 lg:mb-52">Shop Now</button>
+            <h1 class="text-white text-lg font-bold mb-1 mt-1 md:text-3xl md:font-bold md:mt-10 md:mb-4 lg:font-bold lg:text-7xl lg:mb-6 lg:mt-20">Exotic tastes at your<br>doorstep</h1>
+            <p class="text-white text-base mb-2 md:mb-6 lg:text-xl lh:mb-8">We supply highly quality organic products</p>
+            <button class="btn border-none bg-[#F85559] text-white pt-3 pb-3 pl-7 pr-7 mb-9 md:mb-24 lg:mb-52">Shop Now</button>
           </div>
           <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
             <a href="#slide4" class="btn btn-circle">❮</a> 
@@ -58,9 +58,9 @@
 
         <div id="slide2" class="justify-center text-center carousel-item relative w-full" style="background-image: url('images/banner2.png'); background-size: 100%; background-repeat: no-repeat;">
           <div>
-            <h1 class="text-white text-lg mb-1 mt-1 lg:text-7xl lg:mb-6 lg:mt-20">Exotic tastes at your<br>doorstep</h1>
-            <p class="text-white text-base mb-2 lg:text-xl lh:mb-8">We supply highly quality organic products</p>
-            <button class="btn border-none bg-[#F85559] text-white pt-3 pb-3 pl-7 pr-7 mb-9 lg:mb-52">Shop Now</button>
+            <h1 class="text-white text-lg font-bold mb-1 mt-1 md:text-3xl md:font-bold md:mt-10 md:mb-4 lg:font-bold lg:text-7xl lg:mb-6 lg:mt-20">Exotic tastes at your<br>doorstep</h1>
+            <p class="text-white text-base mb-2 md:mb-6 lg:text-xl lh:mb-8">We supply highly quality organic products</p>
+            <button class="btn border-none bg-[#F85559] text-white pt-3 pb-3 pl-7 pr-7 mb-9 md:mb-24 lg:mb-52">Shop Now</button>
           </div>
                   <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide1" class="btn btn-circle">❮</a> 
@@ -70,9 +70,9 @@
 
         <div id="slide3" class="justify-center text-center carousel-item relative w-full" style="background-image: url('images/banner3.png'); background-size: 100%; background-repeat: no-repeat;">
           <div>
-            <h1 class="text-white text-lg mb-1 mt-1 lg:text-7xl lg:mb-6 lg:mt-20">Exotic tastes at your<br>doorstep</h1>
-            <p class="text-white text-base mb-2 lg:text-xl lh:mb-8">We supply highly quality organic products</p>
-            <button class="btn border-none bg-[#F85559] text-white pt-3 pb-3 pl-7 pr-7 mb-9 lg:mb-52">Shop Now</button>
+            <h1 class="text-white text-lg font-bold mb-1 mt-1 md:text-3xl md:font-bold md:mt-10 md:mb-4 lg:font-bold lg:text-7xl lg:mb-6 lg:mt-20">Exotic tastes at your<br>doorstep</h1>
+            <p class="text-white text-base mb-2 md:mb-6 lg:text-xl lh:mb-8">We supply highly quality organic products</p>
+            <button class="btn border-none bg-[#F85559] text-white pt-3 pb-3 pl-7 pr-7 mb-9 md:mb-24 lg:mb-52">Shop Now</button>
           </div>
                   <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide2" class="btn btn-circle">❮</a> 
@@ -82,9 +82,9 @@
 
         <div id="slide4" class="justify-center text-center carousel-item relative w-full" style="background-image: url('images/banner4.png'); background-size: 100%; background-repeat: no-repeat;">
           <div>
-            <h1 class="text-white text-lg mb-1 mt-1 lg:text-7xl lg:mb-6 lg:mt-20">Exotic tastes at your<br>doorstep</h1>
-            <p class="text-white text-base mb-2 lg:text-xl lh:mb-8">We supply highly quality organic products</p>
-            <button class="btn border-none bg-[#F85559] text-white pt-3 pb-3 pl-7 pr-7 mb-9 lg:mb-52">Shop Now</button>
+            <h1 class="text-white text-lg font-bold mb-1 mt-1 md:text-3xl md:font-bold md:mt-10 md:mb-4 lg:font-bold lg:text-7xl lg:mb-6 lg:mt-20">Exotic tastes at your<br>doorstep</h1>
+            <p class="text-white text-base mb-2 md:mb-6 lg:text-xl lh:mb-8">We supply highly quality organic products</p>
+            <button class="btn border-none bg-[#F85559] text-white pt-3 pb-3 pl-7 pr-7 mb-9 md:mb-24 lg:mb-52">Shop Now</button>
           </div>
                   <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide3" class="btn btn-circle">❮</a> 
@@ -154,7 +154,7 @@
         </div>
       </div>
 
-      <div class="flex flex-col lg:flex-row justify-between mt-12">
+      <div class="flex flex-col md:grid md:grid-cols-2 lg:flex-row justify-between mt-12">
         <div class="card bg-white border-[#1212121A] border-2">
           <figure class="">
             <img src="images/fruit6.png" alt="Shoes" class="rounded-xl py-10" />
@@ -321,10 +321,10 @@
     <!-- Team -->
     <section class="relative carousel-item justify-center text-center h-full mt-36 flex flex-col rounded-xl" style="background-image: url('images/team.png'); background-size:cover; background-position: center; background-repeat: no-repeat;">
             <div>
-                <h1 class="text-white text-lg lg:text-7xl mt-3 mb-1 lg:mb-6 lg:mt-32">Meet the team</h1>
+                <h1 class="text-white text-xl font-bold md:text-5xl md:font-bold md:mt-8 md:mb-6 lg:text-7xl lg:font-bold mt-3 mb-3 lg:mb-6 lg:mt-32">Meet the team</h1>
                 <p class="text-white text-base mb-8 max-w-xl m-auto">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
             </div>
-            <div class="flex flex-col m-auto lg:flex-row lg:justify-around">
+            <div class="flex md:grid md:grid-cols-2 flex-col m-auto lg:flex lg:flex-row lg:justify-around">
                 <div>
                     <div class="card w-60">
                         <figure class="">
